--- a/Pages/drinkMaker/drinkMaker.css
+++ b/Pages/drinkMaker/drinkMaker.css
@@ -1,13 +1,13 @@
 footer{
     display: flex;
-    background-image: url("../../Resources/drinkMaker/nonDrinks/drinkBg.jpeg");
+    background-color: #805648;
     background-repeat: no-repeat;
     background-size: 100vw 25vh;
     height: 25vh;
     width: 100vw;
     bottom: 0;
     position: fixed;
-    border-top: 0.75vh solid #ffac93;
+    border-top: 0.75vh solid #533523;
     flex-direction: row;
     justify-content: space-evenly;
     overflow: scroll;
@@ -18,13 +18,13 @@ footer, body{
 }
 
 div{
-    justify-items: center;
+    display: flex;
+    align-items: center;
     flex-direction: column;
-    background: transparent;
-    backdrop-filter: hue-rotate(50deg) brightness(3) saturate(0.05);
+    background-color: #e3bea9;
     background-repeat: no-repeat;
     background-size: cover;
-    border: solid 0.75vh #593621;
+    border: solid 0.75vh #533523;
     border-radius: 2vw;
     height: 10vw;
     width: 12vw;
@@ -33,8 +33,7 @@ div{
 }
 
 #chosen{
-    background: transparent;
-    backdrop-filter: hue-rotate(60deg) brightness(1.5) saturate(0.25);
+    background-color: #c1b393;
 }
 
 #backArrow{
@@ -42,16 +41,14 @@ div{
 }
 
 .ingreIcon{
-    width: 12vw;
+    width: 8.25vw;
     height: 8.25vw;
-}
-
-.ingreIcon, p{
-    margin: 0;
+    margin: 0vw
 }
 
 p{
     font-family: Berkshire Swash;
     color: #593621;
     text-align: center;
+    margin: 0;
 }
